fix spacing within header

--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,5 @@
 header {
+    margin-bottom: 5%;
     background-color: #FAFAFA;
     display: flex;
     justify-content: center;
@@ -14,8 +15,9 @@ header {
     -ms-filter: "FlipH"; /* IE */
 }
 h1 {
+    margin: 10px;
+    font-weight: bolder;
     font-weight: 900;
     display: block;
-    align-content: center;
     font-family: 'Roboto', sans-serif;
 }
